k8s-traefik-oauth2-proxy/oauth2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
  namespace: echons
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - image: quay.io/oauth2-proxy/oauth2-proxy:latest
        name: oauth2-proxy
        args:
        - --provider=google
        - --upstream=file:///dev/null # by default, show 404 after login
        # - --upstream=http://echo.echons.svc.cluster.local # or for debuging use echo as upstream (useful to find correct x-forward-* headers)
        - --http-address=0.0.0.0:4180
        # - --pass-user-headers=true
        - --set-xauthrequest
        imagePullPolicy: Always
        ports:
        - containerPort: 4180
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
  namespace: echons
spec:
  ports:
  - name: 4180-4180
    port: 4180
  selector:
    app: oauth2-proxy
